--- a/VRCSSDateTimeFixer.Tests/VRCSSDateTimeFixer.Tests.csproj
+++ b/VRCSSDateTimeFixer.Tests/VRCSSDateTimeFixer.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -15,6 +15,6 @@
 		<PackageReference Include="coverlet.collector" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\VRChatDateTimeFixer\VRChatDateTimeFixer.csproj" />
+	  <ProjectReference Include="..\VRCSSDateTimeFixer\VRCSSDateTimeFixer.csproj" />
 	</ItemGroup>
 </Project>
