--- a/VRCSSDateTimeFixer/VRCSSDateTimeFixer.csproj
+++ b/VRCSSDateTimeFixer/VRCSSDateTimeFixer.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
 </Project>
