--- a/VRCSSDateTimeFixer.Tests/VRCSSDateTimeFixer.Tests.csproj
+++ b/VRCSSDateTimeFixer.Tests/VRCSSDateTimeFixer.Tests.csproj
@@ -8,6 +8,8 @@
 	<ItemGroup>
 		<PackageReference Include="MetadataExtractor" Version="2.8.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+		<PackageReference Include="Moq" Version="4.20.70" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
 		<PackageReference Include="xunit" Version="2.4.2" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
