--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Auto detect text files and enforce CRLF by default
+* text=auto eol=crlf
 
 # Force line endings to LF for shell scripts
 *.sh text eol=lf
