fix: GitHub issue form schema (feature_request) validation placement

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -74,4 +74,5 @@ body:
       label: 開発プラクティス
       options:
         - label: practice/tdd を適用する（TDDで実装）
-          required: false
+     validations:
+       required: false
